working phase diagram

--- a/ssh_1d_sat_gain/.vscode/settings.json
+++ b/ssh_1d_sat_gain/.vscode/settings.json
@@ -78,7 +78,8 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "fft": "cpp"
+        "fft": "cpp",
+        "codecvt": "cpp"
     },
     
 }
