--- a/ssh_1d_sat_gain/.vscode/launch.json
+++ b/ssh_1d_sat_gain/.vscode/launch.json
@@ -15,7 +15,12 @@
             "environment": [],
             "console": "integratedTerminal",
             "preLaunchTask": "build-runner"
+        },
+        {
+            "name": "Build Cython module",
+            "request": "launch",
+            "type": "cmake",
+            "preLaunchTask": "build-cython-module"
         }
-        
     ]
 }
