--- a/ssh_1d_sat_gain/ssh_1d_cpp/CMakeLists.txt
+++ b/ssh_1d_sat_gain/ssh_1d_cpp/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 
 project(ssh_1d VERSION 0.1 LANGUAGES CXX)
 
+set(GPROF_EXPORT OFF)
+
 set(CMAKE_CXX_STANDARD 17)
 
 set(PYBIND11_FINDPYTHON ON)
@@ -25,8 +27,12 @@ if(WIN32 AND MINGW)
     set(total_link_flags "${total_link_flags} ${mingw_flags_for_python}")
 endif()
 
+if (GPROF_EXPORT)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg -no-pie")
+endif()
+
 set_target_properties(ssh_1d PROPERTIES LINK_FLAGS "${total_link_flags}")
-set_target_properties(ssh_1d_runner PROPERTIES LINK_FLAGS "${total_link_flags}")
+set_target_properties(ssh_1d_runner PROPERTIES LINK_FLAGS "${total_link_flags} -pg")
 
 target_compile_features(ssh_1d PRIVATE cxx_std_17)
 target_compile_features(ssh_1d_runner PRIVATE cxx_std_17)
