--- a/ssh_1d_sat_gain/.vscode/settings.json
+++ b/ssh_1d_sat_gain/.vscode/settings.json
@@ -79,7 +79,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "fft": "cpp",
-        "codecvt": "cpp"
+        "codecvt": "cpp",
+        "cfenv": "cpp"
     },
     
 }
