--- a/ssh_1d_sat_gain/.vscode/settings.json
+++ b/ssh_1d_sat_gain/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/ssh_1d_cpp",
+    "cmake.sourceDirectory": "C:/Users/zeeshan/ML_phase_diagram/ssh_1d_sat_gain/ssh_1d/functions_cpp",
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "cmake.buildDirectory": "${workspaceFolder}/ssh_1d_cpp/build",
     "python.analysis.diagnosticSeverityOverrides": {
