use setuptools instead of conan

--- a/ssh_1d_sat_gain/.vscode/settings.json
+++ b/ssh_1d_sat_gain/.vscode/settings.json
@@ -83,6 +83,6 @@
         "cfenv": "cpp"
     },
     "cmake.automaticReconfigure": false,
-    "C_Cpp.errorSquiggles": "enabled",
+    "C_Cpp.errorSquiggles": "disabled",
     
 }
